# account/api/gen/go/api/account.pb.go
@@ -283,43 +283,43 @@ func init() {
 func init() { proto.RegisterFile("api/account.proto", fileDescriptor_3f8c2a44ebe43c87) }
 
 var fileDescriptor_3f8c2a44ebe43c87 = []byte{
-	// 563 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x93, 0xcf, 0x6e, 0xd3, 0x40,
-	0x10, 0xc6, 0x71, 0x68, 0xdc, 0x76, 0x25, 0x04, 0x5d, 0x4a, 0x31, 0x81, 0x3a, 0x66, 0x85, 0x9a,
-	0xa4, 0xb4, 0x36, 0x7f, 0xab, 0x12, 0xa1, 0x0a, 0x55, 0xea, 0xa1, 0x27, 0x2a, 0x47, 0xbd, 0x80,
-	0x38, 0x6c, 0x9c, 0x8d, 0xbd, 0xc2, 0xde, 0x35, 0xf6, 0x3a, 0x24, 0x42, 0x1c, 0xe0, 0x05, 0x38,
-	0x70, 0xe1, 0x89, 0x10, 0x47, 0x24, 0xee, 0x11, 0x0a, 0x3c, 0x41, 0x9e, 0x00, 0xed, 0xae, 0x93,
-	0x56, 0x15, 0x3d, 0xf4, 0xb6, 0xb3, 0xf3, 0xcd, 0xcf, 0xdf, 0xcc, 0x8e, 0xc1, 0x0a, 0x4e, 0xa9,
-	0x87, 0x83, 0x80, 0x17, 0x4c, 0xb8, 0x69, 0xc6, 0x05, 0x87, 0x0b, 0x24, 0x88, 0x78, 0xed, 0x4e,
-	0xc8, 0x79, 0x18, 0x13, 0x4f, 0xe5, 0x19, 0xe3, 0x02, 0x0b, 0xca, 0x59, 0xae, 0x35, 0xb5, 0xdb,
-	0x65, 0x56, 0x45, 0xdd, 0xa2, 0xef, 0x91, 0x24, 0x15, 0xa3, 0x32, 0xb9, 0x1a, 0xf2, 0x90, 0xab,
-	0xa3, 0x27, 0x4f, 0xfa, 0x16, 0x7d, 0x31, 0xc0, 0x72, 0x87, 0x86, 0xec, 0x90, 0xf9, 0xe4, 0x1d,
-	0x7c, 0x01, 0x96, 0x8a, 0x9c, 0x64, 0x0c, 0x27, 0xc4, 0x32, 0x1c, 0xa3, 0xb9, 0xbc, 0x7f, 0x6f,
-	0x3a, 0xae, 0x3b, 0x59, 0x11, 0x93, 0x36, 0x8a, 0x09, 0x6b, 0x0e, 0x5b, 0xce, 0x73, 0x67, 0xe7,
-	0x89, 0xb3, 0xb1, 0xe1, 0x94, 0xe1, 0x9e, 0xb3, 0x8b, 0xfc, 0x79, 0x95, 0x24, 0xa4, 0x38, 0xcf,
-	0xdf, 0xf3, 0xac, 0x67, 0x55, 0x2e, 0x42, 0x98, 0x55, 0xa1, 0xbb, 0x27, 0x86, 0x72, 0xb8, 0x0a,
-	0xaa, 0x82, 0xbf, 0x25, 0x4c, 0xbb, 0xf1, 0x75, 0x80, 0xbe, 0x57, 0xb4, 0xe6, 0x38, 0x95, 0xa6,
-	0xef, 0x83, 0x2a, 0x49, 0x30, 0x8d, 0x4b, 0xc7, 0x37, 0xa6, 0xe3, 0xfa, 0x8a, 0xfe, 0x1e, 0xcd,
-	0x0f, 0x64, 0xa2, 0x39, 0x6c, 0x21, 0x5f, 0x6b, 0xa4, 0x38, 0x8d, 0x38, 0x23, 0xa5, 0xb9, 0x53,
-	0x62, 0x44, 0xf3, 0x23, 0x99, 0x69, 0x0e, 0x5b, 0xbe, 0xd6, 0xc0, 0x5d, 0xb0, 0xa0, 0x46, 0x71,
-	0xf9, 0x02, 0x8d, 0xa8, 0x0a, 0x58, 0x03, 0x4b, 0x5d, 0x9a, 0x89, 0xa8, 0x87, 0x47, 0xd6, 0x82,
-	0xb2, 0x3e, 0x8f, 0x61, 0x1b, 0x98, 0x21, 0x61, 0x3d, 0x92, 0x59, 0x55, 0xc5, 0x45, 0xd3, 0x71,
-	0xdd, 0xd6, 0xdc, 0xa1, 0x43, 0x99, 0xd3, 0x6c, 0x24, 0x38, 0x26, 0x8d, 0x2d, 0xa7, 0xd1, 0x27,
-	0xea, 0xd4, 0x42, 0x7e, 0x59, 0x01, 0xd7, 0x80, 0x89, 0x07, 0x58, 0xe0, 0xcc, 0x32, 0x15, 0xb5,
-	0x8c, 0xe0, 0x53, 0x60, 0x0e, 0x48, 0x46, 0xfb, 0x23, 0x6b, 0x51, 0x31, 0xd7, 0xa7, 0xe3, 0xfa,
-	0xad, 0x19, 0x33, 0xc1, 0x22, 0x88, 0x9c, 0xc6, 0xeb, 0x07, 0xdb, 0xcf, 0xde, 0x7c, 0xd8, 0xf9,
-	0xd8, 0x40, 0x7e, 0x29, 0x46, 0x08, 0x00, 0x39, 0xc7, 0x97, 0x85, 0x90, 0x83, 0xfc, 0xef, 0xb0,
-	0x1f, 0x7d, 0xaa, 0x80, 0x2b, 0xfa, 0x41, 0x3a, 0x24, 0x1b, 0xd0, 0x80, 0xc0, 0x43, 0x60, 0xea,
-	0x0b, 0x78, 0xd5, 0x95, 0x5b, 0xe9, 0xce, 0x17, 0xa8, 0x76, 0xe6, 0x22, 0x47, 0xeb, 0x9f, 0x7f,
-	0xfd, 0xfd, 0x5a, 0xb9, 0x89, 0xa0, 0x37, 0x78, 0x38, 0xdb, 0x68, 0x2f, 0xa7, 0x21, 0xa3, 0xac,
-	0x6d, 0x6c, 0xc2, 0x23, 0x8d, 0x3a, 0x4e, 0x4f, 0xa3, 0xd4, 0xb3, 0xd6, 0xd6, 0x5c, 0xbd, 0xcd,
-	0xee, 0x6c, 0x9b, 0xdd, 0x03, 0xb9, 0xcd, 0xe7, 0x13, 0x8b, 0x54, 0x12, 0x3b, 0x60, 0xb1, 0x6c,
-	0x09, 0x5e, 0x3b, 0x41, 0xea, 0x0e, 0xcf, 0x65, 0xda, 0x8a, 0x69, 0xa1, 0xeb, 0x67, 0x99, 0xbc,
-	0x10, 0x6d, 0x63, 0x73, 0x7f, 0xef, 0xc7, 0xc4, 0x36, 0x7e, 0x4e, 0x6c, 0xe3, 0xf7, 0xc4, 0x36,
-	0xbe, 0xfd, 0xb1, 0x2f, 0xbd, 0xda, 0x0a, 0xa9, 0x88, 0x8a, 0xae, 0x1b, 0xf0, 0xc4, 0x8b, 0xb0,
-	0x88, 0x39, 0x23, 0xf1, 0xc8, 0x0b, 0xf9, 0x76, 0x96, 0x06, 0x73, 0x82, 0xfc, 0x4b, 0xa5, 0x85,
-	0xae, 0xa9, 0xbe, 0xf7, 0xf8, 0x5f, 0x00, 0x00, 0x00, 0xff, 0xff, 0xd0, 0x61, 0x77, 0xcf, 0xd8,
-	0x03, 0x00, 0x00,
+	// 565 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x93, 0xcf, 0x6e, 0xd3, 0x4c,
+	0x14, 0xc5, 0x3f, 0xe7, 0x6b, 0xdc, 0x76, 0x16, 0x40, 0x87, 0x52, 0x4c, 0xa0, 0x8e, 0x19, 0xa1,
+	0x26, 0x29, 0xad, 0xcd, 0xdf, 0xaa, 0x44, 0xa8, 0x82, 0x4a, 0x5d, 0x74, 0x45, 0xe5, 0xa8, 0x1b,
+	0x10, 0x8b, 0x89, 0x33, 0xb1, 0x47, 0xd8, 0x33, 0xc6, 0x1e, 0x87, 0x44, 0x88, 0x4d, 0x5f, 0x80,
+	0x05, 0x1b, 0x9e, 0x08, 0xb1, 0x44, 0x62, 0x1f, 0xa1, 0xc0, 0x13, 0xe4, 0x09, 0xd0, 0xcc, 0x38,
+	0x69, 0x55, 0xd1, 0x45, 0x77, 0x73, 0x7d, 0xcf, 0xfd, 0xf9, 0xcc, 0xf5, 0x31, 0x58, 0xc1, 0x29,
+	0xf5, 0x70, 0x10, 0xf0, 0x82, 0x09, 0x37, 0xcd, 0xb8, 0xe0, 0x70, 0x81, 0x04, 0x11, 0xaf, 0xdd,
+	0x09, 0x39, 0x0f, 0x63, 0xe2, 0xa9, 0x3e, 0x63, 0x5c, 0x60, 0x41, 0x39, 0xcb, 0xb5, 0xa6, 0x76,
+	0xbb, 0xec, 0xaa, 0xaa, 0x5b, 0xf4, 0x3d, 0x92, 0xa4, 0x62, 0x54, 0x36, 0x57, 0x43, 0x1e, 0x72,
+	0x75, 0xf4, 0xe4, 0x49, 0x3f, 0x45, 0x9f, 0x0d, 0xb0, 0xdc, 0xa1, 0x21, 0x3b, 0x64, 0x3e, 0x79,
+	0x0f, 0x5f, 0x80, 0xa5, 0x22, 0x27, 0x19, 0xc3, 0x09, 0xb1, 0x0c, 0xc7, 0x68, 0x2e, 0xef, 0xdf,
+	0x9b, 0x8e, 0xeb, 0x4e, 0x56, 0xc4, 0xa4, 0x8d, 0x62, 0xc2, 0x9a, 0xc3, 0x96, 0xf3, 0xdc, 0xd9,
+	0x79, 0xe2, 0x6c, 0x6c, 0x38, 0x65, 0xb9, 0xe7, 0xec, 0x22, 0x7f, 0x3e, 0x25, 0x09, 0x29, 0xce,
+	0xf3, 0x0f, 0x3c, 0xeb, 0x59, 0x95, 0xcb, 0x10, 0x66, 0x53, 0xe8, 0xee, 0xa9, 0xa1, 0x1c, 0xae,
+	0x82, 0xaa, 0xe0, 0xef, 0x08, 0xd3, 0x6e, 0x7c, 0x5d, 0xa0, 0x6f, 0x15, 0xad, 0x39, 0x4e, 0xa5,
+	0xe9, 0xfb, 0xa0, 0x4a, 0x12, 0x4c, 0xe3, 0xd2, 0xf1, 0x8d, 0xe9, 0xb8, 0xbe, 0xa2, 0xdf, 0x47,
+	0xf3, 0x03, 0xd9, 0x68, 0x0e, 0x5b, 0xc8, 0xd7, 0x1a, 0x29, 0x4e, 0x23, 0xce, 0x48, 0x69, 0xee,
+	0x8c, 0x18, 0xd1, 0xfc, 0x48, 0x76, 0x9a, 0xc3, 0x96, 0xaf, 0x35, 0x70, 0x17, 0x2c, 0xa8, 0x55,
+	0xfc, 0x7f, 0x89, 0x8b, 0xa8, 0x09, 0x58, 0x03, 0x4b, 0x5d, 0x9a, 0x89, 0xa8, 0x87, 0x47, 0xd6,
+	0x82, 0xb2, 0x3e, 0xaf, 0x61, 0x1b, 0x98, 0x21, 0x61, 0x3d, 0x92, 0x59, 0x55, 0xc5, 0x45, 0xd3,
+	0x71, 0xdd, 0xd6, 0xdc, 0xa1, 0x43, 0x99, 0xd3, 0x6c, 0x24, 0x38, 0x26, 0x8d, 0x2d, 0xa7, 0xd1,
+	0x27, 0xea, 0xd4, 0x42, 0x7e, 0x39, 0x01, 0xd7, 0x80, 0x89, 0x07, 0x58, 0xe0, 0xcc, 0x32, 0x15,
+	0xb5, 0xac, 0xe0, 0x53, 0x60, 0x0e, 0x48, 0x46, 0xfb, 0x23, 0x6b, 0x51, 0x31, 0xd7, 0xa7, 0xe3,
+	0xfa, 0xad, 0x19, 0x33, 0xc1, 0x22, 0x88, 0x9c, 0xc6, 0x9b, 0x07, 0xdb, 0xcf, 0xde, 0x7e, 0xdc,
+	0xf9, 0xd4, 0x40, 0x7e, 0x29, 0x46, 0x08, 0x00, 0xb9, 0xc7, 0x57, 0x85, 0x90, 0x8b, 0xfc, 0xe7,
+	0xb2, 0x1f, 0x9d, 0x54, 0xc0, 0x95, 0x97, 0x3a, 0x8a, 0x1d, 0x92, 0x0d, 0x68, 0x40, 0xe0, 0x21,
+	0x30, 0xf5, 0x27, 0x82, 0x57, 0x5d, 0x19, 0x4b, 0x77, 0x9e, 0xa0, 0xda, 0xb9, 0x07, 0x39, 0x5a,
+	0x3f, 0xf9, 0xf9, 0xe7, 0x4b, 0xe5, 0x26, 0x82, 0xde, 0xe0, 0xe1, 0x2c, 0xd2, 0x5e, 0x4e, 0x43,
+	0x46, 0x59, 0xdb, 0xd8, 0x84, 0x47, 0x1a, 0x75, 0x9c, 0x9e, 0x45, 0xa9, 0xef, 0x5a, 0x5b, 0x73,
+	0x75, 0x9c, 0xdd, 0x59, 0x9c, 0xdd, 0x03, 0x19, 0xe7, 0x8b, 0x89, 0x45, 0x2a, 0x89, 0x1d, 0xb0,
+	0x58, 0xde, 0x09, 0x5e, 0x3b, 0x45, 0xea, 0x2b, 0x5e, 0xc8, 0xb4, 0x15, 0xd3, 0x42, 0xd7, 0xcf,
+	0x33, 0x79, 0x21, 0xda, 0xc6, 0xe6, 0xfe, 0xde, 0xf7, 0x89, 0x6d, 0xfc, 0x98, 0xd8, 0xc6, 0xaf,
+	0x89, 0x6d, 0x7c, 0xfd, 0x6d, 0xff, 0xf7, 0x7a, 0x2b, 0xa4, 0x22, 0x2a, 0xba, 0x6e, 0xc0, 0x13,
+	0x2f, 0xc2, 0x22, 0xe6, 0x8c, 0xc4, 0x23, 0x2f, 0xe4, 0xdb, 0x59, 0x1a, 0xcc, 0x09, 0xf2, 0x37,
+	0x95, 0x16, 0xba, 0xa6, 0x7a, 0xdf, 0xe3, 0xbf, 0x01, 0x00, 0x00, 0xff, 0xff, 0xeb, 0x20, 0x35,
+	0x38, 0xd9, 0x03, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -330,144 +330,144 @@ var _ grpc.ClientConn
 // is compatible with the grpc package it is being compiled against.
 const _ = grpc.SupportPackageIsVersion4
 
-// SignInServiceClient is the client API for SignInService service.
+// AccountServiceClient is the client API for AccountService service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
-type SignInServiceClient interface {
+type AccountServiceClient interface {
 	SignIn(ctx context.Context, in *SignInReq, opts ...grpc.CallOption) (*SignInRes, error)
 	SignUp(ctx context.Context, in *SignUpReq, opts ...grpc.CallOption) (*empty.Empty, error)
 	SignOut(ctx context.Context, in *SignOutReq, opts ...grpc.CallOption) (*empty.Empty, error)
 }
 
-type signInServiceClient struct {
+type accountServiceClient struct {
 	cc *grpc.ClientConn
 }
 
-func NewSignInServiceClient(cc *grpc.ClientConn) SignInServiceClient {
-	return &signInServiceClient{cc}
+func NewAccountServiceClient(cc *grpc.ClientConn) AccountServiceClient {
+	return &accountServiceClient{cc}
 }
 
-func (c *signInServiceClient) SignIn(ctx context.Context, in *SignInReq, opts ...grpc.CallOption) (*SignInRes, error) {
+func (c *accountServiceClient) SignIn(ctx context.Context, in *SignInReq, opts ...grpc.CallOption) (*SignInRes, error) {
 	out := new(SignInRes)
-	err := c.cc.Invoke(ctx, "/echo.SignInService/SignIn", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/echo.AccountService/SignIn", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *signInServiceClient) SignUp(ctx context.Context, in *SignUpReq, opts ...grpc.CallOption) (*empty.Empty, error) {
+func (c *accountServiceClient) SignUp(ctx context.Context, in *SignUpReq, opts ...grpc.CallOption) (*empty.Empty, error) {
 	out := new(empty.Empty)
-	err := c.cc.Invoke(ctx, "/echo.SignInService/SignUp", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/echo.AccountService/SignUp", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *signInServiceClient) SignOut(ctx context.Context, in *SignOutReq, opts ...grpc.CallOption) (*empty.Empty, error) {
+func (c *accountServiceClient) SignOut(ctx context.Context, in *SignOutReq, opts ...grpc.CallOption) (*empty.Empty, error) {
 	out := new(empty.Empty)
-	err := c.cc.Invoke(ctx, "/echo.SignInService/SignOut", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/echo.AccountService/SignOut", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-// SignInServiceServer is the server API for SignInService service.
-type SignInServiceServer interface {
+// AccountServiceServer is the server API for AccountService service.
+type AccountServiceServer interface {
 	SignIn(context.Context, *SignInReq) (*SignInRes, error)
 	SignUp(context.Context, *SignUpReq) (*empty.Empty, error)
 	SignOut(context.Context, *SignOutReq) (*empty.Empty, error)
 }
 
-// UnimplementedSignInServiceServer can be embedded to have forward compatible implementations.
-type UnimplementedSignInServiceServer struct {
+// UnimplementedAccountServiceServer can be embedded to have forward compatible implementations.
+type UnimplementedAccountServiceServer struct {
 }
 
-func (*UnimplementedSignInServiceServer) SignIn(ctx context.Context, req *SignInReq) (*SignInRes, error) {
+func (*UnimplementedAccountServiceServer) SignIn(ctx context.Context, req *SignInReq) (*SignInRes, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method SignIn not implemented")
 }
-func (*UnimplementedSignInServiceServer) SignUp(ctx context.Context, req *SignUpReq) (*empty.Empty, error) {
+func (*UnimplementedAccountServiceServer) SignUp(ctx context.Context, req *SignUpReq) (*empty.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method SignUp not implemented")
 }
-func (*UnimplementedSignInServiceServer) SignOut(ctx context.Context, req *SignOutReq) (*empty.Empty, error) {
+func (*UnimplementedAccountServiceServer) SignOut(ctx context.Context, req *SignOutReq) (*empty.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method SignOut not implemented")
 }
 
-func RegisterSignInServiceServer(s *grpc.Server, srv SignInServiceServer) {
-	s.RegisterService(&_SignInService_serviceDesc, srv)
+func RegisterAccountServiceServer(s *grpc.Server, srv AccountServiceServer) {
+	s.RegisterService(&_AccountService_serviceDesc, srv)
 }
 
-func _SignInService_SignIn_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _AccountService_SignIn_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(SignInReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(SignInServiceServer).SignIn(ctx, in)
+		return srv.(AccountServiceServer).SignIn(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/echo.SignInService/SignIn",
+		FullMethod: "/echo.AccountService/SignIn",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(SignInServiceServer).SignIn(ctx, req.(*SignInReq))
+		return srv.(AccountServiceServer).SignIn(ctx, req.(*SignInReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-func _SignInService_SignUp_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _AccountService_SignUp_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(SignUpReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(SignInServiceServer).SignUp(ctx, in)
+		return srv.(AccountServiceServer).SignUp(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/echo.SignInService/SignUp",
+		FullMethod: "/echo.AccountService/SignUp",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(SignInServiceServer).SignUp(ctx, req.(*SignUpReq))
+		return srv.(AccountServiceServer).SignUp(ctx, req.(*SignUpReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-func _SignInService_SignOut_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+func _AccountService_SignOut_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(SignOutReq)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(SignInServiceServer).SignOut(ctx, in)
+		return srv.(AccountServiceServer).SignOut(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/echo.SignInService/SignOut",
+		FullMethod: "/echo.AccountService/SignOut",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(SignInServiceServer).SignOut(ctx, req.(*SignOutReq))
+		return srv.(AccountServiceServer).SignOut(ctx, req.(*SignOutReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
-var _SignInService_serviceDesc = grpc.ServiceDesc{
-	ServiceName: "echo.SignInService",
-	HandlerType: (*SignInServiceServer)(nil),
+var _AccountService_serviceDesc = grpc.ServiceDesc{
+	ServiceName: "echo.AccountService",
+	HandlerType: (*AccountServiceServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
 			MethodName: "SignIn",
-			Handler:    _SignInService_SignIn_Handler,
+			Handler:    _AccountService_SignIn_Handler,
 		},
 		{
 			MethodName: "SignUp",
-			Handler:    _SignInService_SignUp_Handler,
+			Handler:    _AccountService_SignUp_Handler,
 		},
 		{
 			MethodName: "SignOut",
-			Handler:    _SignInService_SignOut_Handler,
+			Handler:    _AccountService_SignOut_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
